route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: example
  namespace: ds-example-project
  labels:
    app: hello
    app.kubernetes.io/instance: super-great-data-science-project
spec:
  host: example-ds-example-project.apps.hukhan.dev.datahub.redhat.com
  to:
    kind: Service
    name: the-servicefdsqa
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
